Fix gridList wrapping

--- a/yupgup.css
+++ b/yupgup.css
@@ -816,7 +816,6 @@ input {
   .gridList {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
   }
 
   .gridList li {
